# pneumonia_classification

./: .env  .gitignore  README.md  data.dvc  data_drift.html  increase_validation_set.py  locustfile.py  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/agents/: dtu_mlops_agent.md
.github/workflows/: cloudbuild.yaml  cloudbuild_train.yaml  linting.yaml  tests.yaml
configs/: drift.yaml  train_cloud.yaml
configs/experiments/: exp1.yaml  exp1_contrast.yaml  exp1_workers.yaml
db/: prediction_database.csv
dockerfiles/: api.dockerfile  data_drift.dockerfile  entrypoint.sh  entrypoint_drift.sh  evaluate.dockerfile  train.dockerfile  train_cloud.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
reports/: README.md
src/pneumonia/: api.py  api_cloud.py  cloud_drift.py  data.py  data_drift.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20260111_213907-qtmiwng8/: run-qtmiwng8.wandb
wandb/run-20260111_213907-qtmiwng8/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260111_215654-mnj5nnsf/: run-mnj5nnsf.wandb
wandb/run-20260111_215654-mnj5nnsf/files/: config.yaml  wandb-metadata.json
wandb/run-20260111_215936-riz931cq/: run-riz931cq.wandb
wandb/run-20260111_215936-riz931cq/files/: config.yaml  wandb-metadata.json
wandb/run-20260111_220112-9ohkph5t/: run-9ohkph5t.wandb
wandb/run-20260111_220431-vfw0qy7y/: run-vfw0qy7y.wandb
wandb/run-20260111_221007-7i5ogdxv/: run-7i5ogdxv.wandb
wandb/run-20260112_172704-ngbki4ok/: run-ngbki4ok.wandb
(+12 files in other folders)
